--- a/sensum/scss/styles.scss
+++ b/sensum/scss/styles.scss
@@ -78,6 +78,16 @@ $red-color: #b10820;
 @import "scss/hero";
 
 /* =================
+    GALLERY
+ ================= */
+@import "scss/gallery";
+
+/* =================
+    MODAL
+ ================= */
+@import "scss/modal";
+
+/* =================
     MEDIA
  ================= */
 @import "scss/media";
