--- a/sensum/scss/_gallery.scss
+++ b/sensum/scss/_gallery.scss
@@ -11,14 +11,16 @@
   @include flex-box-row-center();
 }
 .gallery__arrow {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  padding: 0.5em;
   background-color: rgba(255, 255, 255, 0.5);
   font-size: 2rem;
   color: $sensum-color;
   cursor: pointer;
+}
+.gallery__arrow:first-child {
+  padding-right: 0.5em;
+}
+.gallery__arrow:last-child {
+  padding-left: 0.5em;
 }
 .gallery__img {
   width: auto !important;
