--- a/sensum/scss/_holiday.scss
+++ b/sensum/scss/_holiday.scss
@@ -2,17 +2,20 @@
   @include flex-box-col-center();
   padding-top: 6em;
   padding-bottom: 6em;
-  background-image: url(./img/celebration.jpg);
+  background-image: url(./img/celebrationBlur.png);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+  .hero__btn {
+    font-size: 1.5rem;
+  }
 }
 .holiday__wrapper {
   @include flex-box-col-center-all();
 }
 .holiday__head {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(49, 182, 147, 0.5);
   font-size: 3rem;
   text-align: center;
   color: #fff;
