--- a/sensum/styles.css
+++ b/sensum/styles.css
@@ -120,9 +120,10 @@ header {
 .hero__utp {
   font-family: "Roboto";
   font-size: 1.4rem;
-  font-weight: 300; }
+  font-weight: 700;
+  color: #31b693; }
   .hero__utp img {
-    height: 25px; }
+    height: 50px; }
 
 .hero__location {
   display: -webkit-box;
@@ -133,7 +134,8 @@ header {
           align-items: center;
   font-family: "Roboto";
   font-size: 1.4rem;
-  font-weight: 300; }
+  font-weight: 700;
+  color: #b32b10; }
   .hero__location p {
     width: 50%; }
   .hero__location img {
