--- a/sensum/styles.css
+++ b/sensum/styles.css
@@ -104,11 +104,10 @@ header {
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  background-image: url(./img/fon1.png);
+  background-image: url(./img/fon4.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  background-attachment: fixed; }
+  background-size: cover; }
   .hero b {
     color: #b10820; }
 
