--- a/media/styles.css
+++ b/media/styles.css
@@ -23,7 +23,9 @@ COMMON
 
 html,
 body {
-  margin: 0; }
+  margin: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit; }
 
 body {
   display: -webkit-box;
@@ -35,7 +37,9 @@ body {
           flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit; }
 
 h1,
 h2,
